testsuite/tests/builtins/list_methods/reduce/error_in_fn/test.out
Error: Error from the Lua engine
   ╭─[ <working-dir>/script.lkql:2:28 ]
   │
 2 │ print(l.reduce((res, i) => res + i, true))
   │                            ───┬───  
   │                               ╰───── Attempt to perform arithmetic on local 'res' (a boolean value)
───╯
Advice: Called in "script.lkql"
   ╭─[ <working-dir>/script.lkql:2:7 ]
   │
 2 │ print(l.reduce((res, i) => res + i, true))
───╯
